# arcane

./: .env.example  .gitignore  README.md  docker-compose.yml  implementation.md  implementation_plan.md  pyproject.toml  walkthrough.md
arcane/: __init__.py  config.py  main.py
arcane/agents/: __init__.py  crew.py  critic.py  planner.py  query_generator.py  researcher.py  synthesizer.py
arcane/api/: __init__.py  app.py  schemas.py  websocket.py
arcane/api/routes/: __init__.py  health.py  research.py  sessions.py
arcane/graph/: __init__.py  builder.py  checkpointer.py  edges.py  nodes.py  state.py
arcane/memory/: __init__.py  redis_memory.py  session.py
arcane/rag/: __init__.py  cache.py  embeddings.py  pipeline.py  retriever.py  vectorstore.py
arcane/tools/: __init__.py  academic_search.py  document_loader.py  reranker.py  web_scraper.py  web_search.py
arcane/utils/: __init__.py  formatting.py  logging.py  retry.py
frontend/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_agents.py  test_graph.py  test_rag.py  test_tools.py
