[project]
name = "arcane"
version = "0.1.0"
description = "Agentic Research Intelligence Platform — Multi-agent research system with RAG pipeline, LangGraph orchestration, and CrewAI task delegation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    # Orchestration & Agents
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-cohere>=0.3.0",
    "crewai>=0.80.0",

    # LLM & Embeddings
    "cohere>=5.0.0",
    "litellm>=1.40.0",

    # Search & Retrieval
    "duckduckgo-search>=6.0.0",

    # Vector Store & Cache
    "redis>=5.0.0",
    "redisvl>=0.3.0",

    # Web & API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "websockets>=13.0",

    # Content Extraction
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.12.0",

    # Configuration & Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",

    # Document Processing
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
arcane = "arcane.main:cli"

[tool.setuptools.packages.find]
include = ["arcane*"]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
